add style to navbar Relates #4

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Resume Automattic</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Play" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header class="header">
-      <h1 class="vered">VERED REKANATI</h1>
+      <h1 class="name-title">VERED<span class="blue-letter">/</span>REKANATI</h1>
       <nav class="navbar">
-        <a class="nav-link" href="">1. Resume</a>
-        <a class="nav-link" href="">2. Github</a>
-        <a class="nav-link" href="">3. Linkedin</a>
-        <a class="nav-link" href="">4. Contact</a>
+        <ol class="manu-list">
+          <li class="list-item"><a class="nav-link current" href="">Resume</a></li>
+          <li class="list-item"><a class="nav-link" href="">Github</a></li>
+          <li class="list-item"><a class="nav-link" href="">Linkedin</a></li>
+          <li class="list-item"><a class="nav-link" href="">FreeCodeCamp</a></li>
       </nav>
     </header>
 
