Style body of home page Relates #5

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Resume Automattic</title>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Play" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Play|Caudex" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -18,11 +18,12 @@
       </nav>
     </header>
 
-    <h2 class="subtitle"> Web Developer and Bootcamp Mentor </h2>
+    <h2 class="subtitle"> Aiming to Make The World a Better Place through Technology and Nonstandard Education </h2>
+
     <section class="main-content">
       <div class="content-part">
         <h3 class="part-title">Bootcamp</h3>
-        <p class="part-text">I am a Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
+        <p class="part-text">I am Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
       </div>
 
       <div class="content-part">
@@ -67,7 +68,11 @@
     </section>
 
     <footer class="footer">
-      <p class="footer-text">Vered Rekanati veredrec@gmail.com Nazareth, Israel - South Bend, IN </p>
+      <p class="footer-text">
+        <span class="footer-item"> Vered Rekanati </span>
+        <span class="footer-item"> veredrec@gmail.com </span>
+        <span class="footer-item"> Nazareth, Israel - South Bend, IN </span>
+      </p>
       <i class="fa fa-linkedin"></i>
       <i class="fa fa-github"></i>
       <i class="fa fa-twitter"></i>
