Add content to home page Relates #3

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Resume Automattic</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Play|Caudex" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
@@ -22,49 +23,58 @@
 
     <section class="main-content">
       <div class="content-part">
-        <h3 class="part-title">Bootcamp</h3>
-        <p class="part-text">I am Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
-      </div>
-
-      <div class="content-part">
-        <h3 class="part-title">Bootcamp</h3>
+        <h3 class="part-title">Founders & Coders</h3>
         <p class="part-text">I am a Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
       </div>
 
       <div class="content-part">
-        <h3 class="part-title">Bootcamp</h3>
-        <p class="part-text">I am a Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
+        <h3 class="part-title">Skills</h3>
+        <p class="part-text"><span class="skills">Strong:</span> JavaScripe, HTML5, CSS3, WordPress, Git, Node.js, PostgreSQL<br><span class="skills">Knowledgeable:</span> React, MongoDB, jQuery, ES6</p>
       </div>
 
       <div class="content-part">
-        <h3 class="part-title">Bootcamp</h3>
-        <p class="part-text">I am a Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
+        <h3 class="part-title">Front End Certificate</h3>
+        <p class="part-text">I received my Front End Certificate from FreeCodeCamp on April 2017, after developing project using front-end technologies</p>
       </div>
 
       <div class="content-part">
-        <h3 class="part-title">Bootcamp</h3>
-        <p class="part-text">I am a Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
+        <h3 class="part-title">Employment</h3>
+        <ul class="part-list">
+          <li class="item-list">- Research Assistant, Princeton University (2016-2017)</li>
+          <li class="item-list">- Educator at Hatikvah Academy Charter School, NJ (2013-2016)</li>
+          <li class="item-list">- Program Director at Hillel, the Hebrew University (2009-2011)</li>
+        </ul>
       </div>
 
       <div class="content-part">
-        <h3 class="part-title">Bootcamp</h3>
-        <p class="part-text">I am a Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
+        <h3 class="part-title">Education</h3>
+        <ul class="part-list">
+          <li class="item-list">- Founders and Coders - Full Stack Web Development Bootcamp (2017)</li>
+          <li class="item-list">- Master of Arts in Contemporary Jewish History, The Hebrew University (2012)</li>
+          <li class="item-list">- Bachlor of Arts in Social Studies, The Hebrew University (2009)</li>
+        </ul>
       </div>
 
       <div class="content-part">
-        <h3 class="part-title">Bootcamp</h3>
-        <p class="part-text">I am a Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
+        <h3 class="part-title">Interests</h3>
+        <p class="part-text">I love traveling, playing board games, hiking, running (two half marathons so far!), being with friends, and reading Medium articles. <br>And yes, I love coding!</p>
       </div>
 
       <div class="content-part">
-        <h3 class="part-title">Bootcamp</h3>
-        <p class="part-text">I am a Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
+        <h3 class="part-title">WordPress Websites</h3>
+        <p class="part-text">I worked as a Freelance WordPress Developer, creating website for small businesses and non profits as <a class="project-link" href="wwww.koren.org">Koren</a></p>
       </div>
 
       <div class="content-part">
-        <h3 class="part-title">Bootcamp</h3>
-        <p class="part-text">I am a Graduate Mentor and Web Developer at Founders as Coders, a Full Stack Web Development Bootcamp</p>
+        <h3 class="part-title">React Application</h3>
+        <p class="part-text">Web App for exposing young people to a variety of career paths, using React, Redux, Express /<a class="project-link" href="wwww.path18"> Path 18</a></p>
       </div>
+
+      <div class="content-part">
+        <h3 class="part-title">Express.js Application</h3>
+        <p class="part-text">Web Platform for volunteering events. Prototype using Express, handlebars, MongoDB /<a class="project-link" href="wwww.somthing good"> Something Good</a></p>
+      </div>
+
     </section>
 
     <footer class="footer">
