Add icons to footer Relates #6

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Resume Automattic</title>
+    <script src="https://use.fontawesome.com/7a1353cd80.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Play|Caudex" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -78,14 +79,20 @@
     </section>
 
     <footer class="footer">
-      <p class="footer-text">
-        <span class="footer-item"> Vered Rekanati </span>
-        <span class="footer-item"> veredrec@gmail.com </span>
-        <span class="footer-item"> Nazareth, Israel - South Bend, IN </span>
-      </p>
-      <i class="fa fa-linkedin"></i>
-      <i class="fa fa-github"></i>
-      <i class="fa fa-twitter"></i>
+      <div class="footer-text-icons">
+        <div class="footer-text">
+          <span class="footer-item"> Vered Rekanati </span>
+          <span class="footer-item"> veredrec@gmail.com </span>
+          <span class="footer-item"> Nazareth, Israel - South Bend, IN </span>
+        </div>
+        <div class="footer-icons">
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-github"></i>
+          <i class="fa fa-twitter"></i>
+          <i class="fa fa-codepen"></i>
+          <i class="fa fa-medium"></i>
+        </div>
+      </div>
     </footer>
 
   </body>
