--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <h1 class="name-title">VERED<span class="blue-letter">/</span>REKANATI</h1>
       <nav class="navbar">
         <ol class="manu-list">
-          <li class="list-item"><a class="nav-link current" href="">Resume</a></li>
-          <li class="list-item"><a class="nav-link" href="">Github</a></li>
-          <li class="list-item"><a class="nav-link" href="">Linkedin</a></li>
-          <li class="list-item"><a class="nav-link" href="">FreeCodeCamp</a></li>
+          <li class="list-item"><a class="nav-link current" href="https://veredrec.github.io/Resume/.">Resume</a></li>
+          <li class="list-item"><a class="nav-link" href="https://github.com/veredrec" target="_blank">Github</a></li>
+          <li class="list-item"><a class="nav-link" href="https://www.linkedin.com/in/vered-rekanati-05204a76/" target="_blank">Linkedin</a></li>
+        </ol>
       </nav>
     </header>
 
@@ -63,17 +63,17 @@
 
       <div class="content-part">
         <h3 class="part-title">WordPress Websites</h3>
-        <p class="part-text">I worked as a Freelance WordPress Developer, creating website for small businesses and non profits as <a class="project-link" href="wwww.koren.org">Koren</a></p>
+        <p class="part-text">I worked as a Freelance WordPress Developer, creating website for small businesses and non profits as <a class="project-link" href="http://www.koren.org.il/" target="_blank">Koren</a></p>
       </div>
 
       <div class="content-part">
         <h3 class="part-title">React Application</h3>
-        <p class="part-text">Web App for exposing young people to a variety of career paths, using React, Redux, Express /<a class="project-link" href="wwww.path18"> Path 18</a></p>
+        <p class="part-text">Web App for exposing young people to a variety of career paths, using React, Redux, Express /<a class="project-link" href="https://github.com/veredrec/path-18" target="_blank"> Path 18</a></p>
       </div>
 
       <div class="content-part">
         <h3 class="part-title">Express.js Application</h3>
-        <p class="part-text">Web Platform for volunteering events. Prototype using Express, handlebars, MongoDB /<a class="project-link" href="wwww.somthing good"> Something Good</a></p>
+        <p class="part-text">Web Platform for volunteering events. Prototype using Express, handlebars, MongoDB /<a class="project-link" href="https://github.com/veredrec/Something-Good" target="_blank"> Something Good</a></p>
       </div>
 
     </section>
@@ -86,11 +86,11 @@
           <span class="footer-item"> Nazareth, Israel - South Bend, IN </span>
         </div>
         <div class="footer-icons">
-          <i class="fa fa-linkedin-square"></i>
-          <i class="fa fa-github"></i>
-          <i class="fa fa-twitter"></i>
-          <i class="fa fa-codepen"></i>
-          <i class="fa fa-medium"></i>
+          <a class="icon" href="https://github.com/veredrec" target="_blank"><i class="fa fa-github"></i></a>
+          <a class="icon" href="https://codepen.io/veredrec/" target="_blank"><i class="fa fa-codepen"></i></a>
+          <a class="icon" href="https://medium.com/@veredrec" target="_blank"><i class="fa fa-medium"></i></a>
+          <a class="icon" href="https://www.linkedin.com/in/vered-rekanati-05204a76/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+          <a class="icon" href="https://twitter.com/veredrec" target="_blank"><i class="fa fa-twitter"></i></a>
         </div>
       </div>
     </footer>
