Change subtitle and nav items sizes Relates #17

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <h1 class="name-title">VERED<span class="blue-letter">/</span>REKANATI</h1>
       <nav class="navbar">
         <ol class="manu-list">
-          <li class="list-item"><a class="nav-link current" href="https://veredrec.github.io/Resume/.">Resume</a></li>
-          <li class="list-item"><a class="nav-link" href="https://github.com/veredrec" target="_blank">Github</a></li>
-          <li class="list-item"><a class="nav-link" href="https://www.linkedin.com/in/vered-rekanati-05204a76/" target="_blank">Linkedin</a></li>
+          <li class="list-item"><a class="nav-link current" href="https://veredrec.github.io/Resume/."><span class="number">1.</span> Resume</a></li>
+          <li class="list-item"><a class="nav-link" href="https://github.com/veredrec" target="_blank"><span class="number">2.</span> Github</a></li>
+          <li class="list-item"><a class="nav-link" href="https://www.linkedin.com/in/vered-rekanati-05204a76/" target="_blank"><span class="number">3.</span> Linkedin</a></li>
         </ol>
       </nav>
     </header>
